Fri Jul 10 10:33:26 2020  Rob Lauer  <rlauer6@comcast.net>

	* Makefile: new
	* makala/data/Makefile.jinja2
	- use makala entry point
	- force rebuild of role if make real-clean
	* README.md: added more sections
	* makala/makala.py
	- comments
	- if vpc in config but not defined, provide default